		If a users homedirectory doesn't exist, a correct error message
		is displayed and logged.

	mbsetup:
		Added user@domain login for pop3 servers in screen 1.12.
		Added compile directive for full newsgate to prevent newsgroup
		name creation in default compiled mode.
		When editing files, after leaving a file record the file range
		displayed stays around the last area.


v0.61.0		06-Jun-2004 - 20-Jun-2004

	libnodelist.a:
		Implemented the ICM flag (FSP-1033).

	mbmsg:
		With te post command, the right number of commandline options
		is checked, if this is wrong the help message is displayed.
		If a message is posted in a local area, no echomail.jam is
		updated and the mailout semafore is not set.
		Added checks in the mbmsg post command if the To parameter has
		the correct syntax for netmail and all other areas.
		Fixed parameter count if post is used with the -q option.
		Will now return a non-zero error if the post() function
		failed.

	mbout:
		Implemented the ICM flag (FSP-1033).

	mbcico:
		Implemented the ICM flag (FSP-1033).

	mbtask:
		Implemented the ICM flag (FSP-1033).

	mbfile:
		The filenames in the html pages are now the long filenames.
		This fixes download problems with some mangled 8.3 filenames.

	mbsetup:
		In mail and files group edit screens, to make an area active
		existing connections check is skipped.
		If a node record is deleted, the outbox and directory paths
		are removed as well if they are empty.


v0.60.0         09-Feb-2004 - 04-Jun-2004


        upgrade:
		Before upgrade announce all new files!
                Compile all programs.
                Close the system with mbstat close.
                Install programs as root (as usual).
                Start mbsetup, this can take a while on a system with lots of
                files, during startup the files database will be converted.
                After the menu appears, enter global setup, exit and save.
		This will also update the message area records and the message