@@ -66,10 +66,6 @@ newuser:
 	L: Allow handles to be the same as the unixname.
 
 mbfido:
-	N: The elist rules files are named (8.3) areaname.rul where areaname
-	   is the first 8 characters of the area name and we use the full name
-	   only. Make sure both namings are accepted?
-
 	N: Count posted messages during mailscan.
 
 	N: Code cleanup and make a structure in this program. Remove duplicate
@@ -159,6 +155,4 @@ mbsetup:
 
 	N: Add global setup in menus 9.1 and 10.1 at least to change uplink
 	   data.
-
-	N: When a message area is deleted, delete the rulesfile too.
 
